prepare for Java 11 and beyond